# apply-wise

./: .gitignore  README.md  job_intelligence_extension_technical_prd.md  package.json  pnpm-lock.yaml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/app/api/routes/: analysis.py  health.py  outreach.py  resumes.py  settings.py
backend/app/core/: config.py  errors.py  logging.py
backend/app/db/: models.py  repositories.py  session.py
backend/app/schemas/: analysis.py  company.py  contacts.py  job.py  outreach.py  resume.py  settings.py
backend/app/services/: company_research.py  contact_discovery.py  email_patterns.py  job_parser.py  llm_client.py  outreach.py  public_search.py  resume_parser.py  scoring.py
backend/app/utils/: security.py  text.py  urls.py
backend/data/: settings.json
backend/tests/: test_api_smoke.py  test_company_research.py  test_contact_discovery.py  test_email_patterns.py  test_job_parser.py  test_llm_client.py  test_outreach.py  test_public_search.py  test_resume_parser.py  test_scoring.py
extension/: index.html  manifest.json  options.html  package.json  sidebar.html  tailwind.config.js  tsconfig.json  vite.config.ts
extension/src/background/: serviceWorker.ts
extension/src/content/: domUtils.ts  linkedinExtractor.test.ts  linkedinExtractor.ts
extension/src/options/: OptionsApp.tsx
extension/src/popup/: PopupApp.tsx
extension/src/sidebar/: SidebarApp.tsx
extension/src/sidebar/components/: CompanyCard.tsx  ContactCard.tsx  ErrorState.tsx  JobSummaryCard.tsx  (+7 more)
extension/src/styles/: globals.css
(+10 files in other folders)
