[project]
name = "applyintel-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.32.1",
  "pydantic==2.10.4",
  "SQLAlchemy==2.0.36",
  "httpx==0.28.1",
  "beautifulsoup4==4.12.3",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.20",
  "pypdf==5.1.0"
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
